--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
     </properties>
 
     <dependencies>
-        <dependency>
+        <dependency
             <groupId>com.microsoft.playwright</groupId>
             <artifactId>playwright</artifactId>
-            <version>1.47.0</version>
+            <version>1.49.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
