--- a/.github/workflows/daily-branch-verification.yml
+++ b/.github/workflows/daily-branch-verification.yml
@@ -14,6 +14,13 @@ jobs:
         with:
           fetch-depth: 0 # Fetch all branches and history
 
+      # Step 2: Set up JDK 17 (adjust if you're using a different version)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
       - name: Get list of branches
         id: get-branches
         run: |
