--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -4,10 +4,10 @@ name: Playwright Tests
 on:
   push:
     branches:
-      - '**'  # Run on every branch for every commit
+      - '**'
   pull_request:
     branches:
-      - '**'  # Run on every pull request for any branch
+      - '**'
 
 jobs:
   test:
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up JDK 17 (adjust if you're using a different version)
+      # Step 2: Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -31,13 +31,13 @@ jobs:
           wget https://downloads.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz
           tar -xvzf apache-maven-3.9.9-bin.tar.gz
           sudo mv apache-maven-3.9.9 /opt/maven
-          sudo ln -s /opt/maven/bin/mvn /usr/bin/mvn
+          echo "export PATH=/opt/maven/bin:$PATH" >> $GITHUB_ENV
 
       # Step 4: Verify Maven installation
       - name: Verify Maven version
         run: mvn --version
 
-      # Step 5: Cache Maven dependencies to speed up future builds
+      # Step 5: Cache Maven dependencies
       - name: Cache Maven dependencies
         uses: actions/cache@v3
         with:
