--- a/.github/workflows/daily-branch-verification.yml
+++ b/.github/workflows/daily-branch-verification.yml
@@ -21,6 +21,14 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      # Step 3: Install Maven 3.9.9
+      - name: Install Maven 3.9.9
+        run: |
+          wget https://downloads.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz
+          tar -xvzf apache-maven-3.9.9-bin.tar.gz
+          sudo mv apache-maven-3.9.9 /opt/maven
+          echo "export PATH=/opt/maven/bin:$PATH" >> $GITHUB_ENV
+          
       - name: Get list of branches
         id: get-branches
         run: |
