--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -4,10 +4,10 @@ name: Playwright Tests
 on:
   push:
     branches:
-      - '**'  # Run on every branch for every commit
+      - '**'
   pull_request:
     branches:
-      - '**'  # Run on every pull request for any branch
+      - '**'
 
 jobs:
   test:
@@ -18,14 +18,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up JDK 17 (adjust if you're using a different version)
+      # Step 2: Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
 
-      # Step 3: Cache Maven dependencies to speed up future builds
+      # Step 3: Install Maven 3.9.9
+      - name: Install Maven 3.9.9
+        run: |
+          wget https://downloads.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz
+          tar -xvzf apache-maven-3.9.9-bin.tar.gz
+          sudo mv apache-maven-3.9.9 /opt/maven
+          echo "export PATH=/opt/maven/bin:$PATH" >> $GITHUB_ENV
+
+      # Step 4: Verify Maven installation
+      - name: Verify Maven version
+        run: mvn --version
+
+      # Step 5: Cache Maven dependencies
       - name: Cache Maven dependencies
         uses: actions/cache@v3
         with:
@@ -34,6 +46,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
-      # Step 4: Run Maven to execute Playwright tests
+      # Step 6: Run Maven to execute Playwright tests
       - name: Run Playwright Tests
         run: mvn verify
