--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -47,6 +47,35 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
-      # Step 4: Run Maven to execute Playwright tests
+      # Step 6: Install system dependencies for Playwright
+      - name: Install Playwright dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libwoff1 \
+            libopus0 \
+            libwebp6 \
+            libwebpdemux2 \
+            libenchant1c2a \
+            libgudev-1.0-0 \
+            libsecret-1-0 \
+            libhyphen0 \
+            libgdk-pixbuf2.0-0 \
+            libegl1 \
+            libgles2 \
+            libevent-2.1-7 \
+            libnotify4 \
+            libxslt1.1 \
+            libxcomposite1 \
+            libatk1.0-0 \
+            libcups2 \
+            libxrandr2 \
+            libdbus-1-3 \
+            libxtst6 \
+            libnss3 \
+            libasound2 \
+            libxshmfence1
+
+      # Step 6: Run Maven to execute Playwright tests
       - name: Run Playwright Tests
         run: mvn verify
