--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       # Step 2: Set up JDK 17 (adjust if you're using a different version)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -47,34 +52,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
-      # Step 6: Install system dependencies for Playwright
       - name: Install Playwright dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwoff1 \
-            libopus0 \
-            libwebp6 \
-            libwebpdemux2 \
-            libenchant1c2a \
-            libgudev-1.0-0 \
-            libsecret-1-0 \
-            libhyphen0 \
-            libgdk-pixbuf2.0-0 \
-            libegl1 \
-            libgles2 \
-            libevent-2.1-7 \
-            libnotify4 \
-            libxslt1.1 \
-            libxcomposite1 \
-            libatk1.0-0 \
-            libcups2 \
-            libxrandr2 \
-            libdbus-1-3 \
-            libxtst6 \
-            libnss3 \
-            libasound2 \
-            libxshmfence1
+        run: npx playwright install-deps
 
       # Step 6: Run Maven to execute Playwright tests
       - name: Run Playwright Tests
