--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -4,10 +4,10 @@ name: Playwright Tests
 on:
   push:
     branches:
-      - '**'
+      - '**'  # Run on every branch for every commit
   pull_request:
     branches:
-      - '**'
+      - '**'  # Run on every pull request for any branch
 
 jobs:
   test:
@@ -18,7 +18,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up JDK 17
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      # Step 2: Set up JDK 17 (adjust if you're using a different version)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -46,6 +51,9 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven
+
+      - name: Install Playwright dependencies
+        run: npx playwright install-deps
 
       # Step 6: Run Maven to execute Playwright tests
       - name: Run Playwright Tests
