Updated the nightly build script

--- a/.github/workflows/daily-branch-verification.yml
+++ b/.github/workflows/daily-branch-verification.yml
@@ -21,14 +21,23 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       # Step 3: Install Maven 3.9.9
-      - name: Install Maven 3.9.9
-        run: |
-          wget https://downloads.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz
-          tar -xvzf apache-maven-3.9.9-bin.tar.gz
-          sudo mv apache-maven-3.9.9 /opt/maven
-          echo "export PATH=/opt/maven/bin:$PATH" >> $GITHUB_ENV
-          
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@v1.7.0
+        with:
+          checkout-fetch-depth: 0
+          java-version: 17
+          java-distribution: temurin
+          maven-version: 3.9.9
+
+      - name: Install Playwright dependencies
+        run: npx playwright install-deps
+
       - name: Get list of branches
         id: get-branches
         run: |
