--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -69,18 +69,9 @@ jobs:
           path: 'target/*.zip'
 
       # Step 8: Deploy Allure report to GitHub Pages
-#      - name: Deploy Allure Report to GitHub Pages
-#        if: always()  # Ensure this step runs even if tests fail
-#        uses: peaceiris/actions-gh-pages@v3
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          publish_dir: target/site/allure-maven-plugin
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy Allure Report to GitHub Pages
+        if: always()  # Ensure this step runs even if tests fail
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          # Upload entire repository
-          path: 'target/site/allure-maven-plugin'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: target/site/allure-maven-plugin
