--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -4,7 +4,7 @@ name: Playwright Tests
 on:
   push:
     branches:
-      - '**'  # Run on every branch for every commit
+      - '**' # Run on pushes to main
   pull_request:
     branches:
       - '**'  # Run on every pull request for any branch
@@ -59,18 +59,49 @@ jobs:
       - name: Run Playwright Tests
         run: mvn verify
 
+      # Step 7: Upload the 'target' directory as an artifact
+      - name: Upload 'target' directory
+        if: always()  # Ensure this step runs even if tests fail
+        uses: actions/upload-artifact@v3
+        with:
+          name: target-directory
+          path: target
 
-      # Step 7: Archive ZIP files in the root directory
+#      # Step 7: Archive ZIP files in the root directory
+#      - name: Archive ZIP files
+#        if: always()  # Ensure this step runs even if previous steps fail
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: zip-archives
+#          path: 'target/*.zip'
+#
+#      # Step 8: Deploy Allure report to GitHub Pages
+#      - name: Deploy Allure Report to GitHub Pages
+#        if: always()  # Ensure this step runs even if tests fail
+#        uses: peaceiris/actions-gh-pages@v3
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          publish_dir: target/site/allure-maven-plugin
+
+  reporting:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      # Step 1: Download the 'target' directory
+      - name: Download 'target' directory
+        uses: actions/download-artifact@v3
+        with:
+          name: target-directory
+
+      # Step 2: Archive ZIP files in the root directory
       - name: Archive ZIP files
-        if: always()  # Ensure this step runs even if previous steps fail
         uses: actions/upload-artifact@v4
         with:
           name: zip-archives
           path: 'target/*.zip'
 
-      # Step 8: Deploy Allure report to GitHub Pages
+      # Step 3: Deploy Allure report to GitHub Pages
       - name: Deploy Allure Report to GitHub Pages
-        if: always()  # Ensure this step runs even if tests fail
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
