--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -59,24 +59,33 @@ jobs:
       - name: Run Playwright Tests
         run: mvn verify
 
-      # Step 7: Upload Allure Report directory as artifact
-      - name: Upload Allure Report directory
+      # Step 5: Zip the Allure Report
+      - name: Zip Allure Report
+        run: |
+          zip -r allure-report.zip target/site/allure-maven-plugin
+
+      # Step 6: Upload ZIP Artifact
+      - name: Upload Allure Report ZIP
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
-          path: target/site/allure-maven-plugin/
+          path: allure-report.zip
 
   reporting:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      # Step 1: Download Allure Report directory artifact
-      - name: Download Allure Report directory
+      # Step 1: Download Allure Report ZIP
+      - name: Download Allure Report ZIP
         uses: actions/download-artifact@v4
         with:
           name: allure-report
 
-      # Step 3: Deploy Allure report to GitHub Pages
+      # Step 2: Unzip the Allure Report
+      - name: Unzip Allure Report
+        run: unzip allure-report.zip -d target/site/
+
+      # Step 3: Deploy Allure Report to GitHub Pages
       - name: Deploy Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
