Publish allure reports to ghpages

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -76,6 +76,7 @@ jobs:
   reporting:
     runs-on: ubuntu-latest
     needs: test
+    if: always()
     steps:
       # Step 1: Download Allure Report ZIP
       - name: Download Allure Report ZIP
