--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -4,7 +4,7 @@ name: Playwright Tests
 on:
   push:
     branches:
-      - '**' # Run on pushes to main
+      - '**'  # Run on every branch for every commit
   pull_request:
     branches:
       - '**'  # Run on every pull request for any branch
@@ -59,41 +59,17 @@ jobs:
       - name: Run Playwright Tests
         run: mvn verify
 
-      # Step 5: Zip the Allure Report
-      - name: Zip Allure Report
-        if: always()
-        run: |
-          zip -r allure-report.zip target/site/allure-maven-plugin
+#      # Step 7: Archive ZIP files in the root directory
+#      - name: Archive ZIP files
+#        if: always()  # Ensure this step runs even if previous steps fail
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: zip-archives
+#          path: 'target/*.zip'
 
-      # Step 6: Upload ZIP Artifact
-      - name: Upload Allure Report ZIP
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report.zip
-
-  reporting:
-    runs-on: ubuntu-latest
-    needs: test
-    if: always()
-    steps:
-      # Step 1: Download Allure Report ZIP
-      - name: Download Allure Report ZIP
-        uses: actions/download-artifact@v4
-        with:
-          name: allure-report
-
-      # Step 2: Unzip the Allure Report
-      - name: Unzip Allure Report
-        if: always()
-        run: |
-          mkdir -p target/site/
-          unzip allure-report.zip -d target/site/
-
-      # Step 3: Deploy Allure Report to GitHub Pages
+      # Step 8: Deploy Allure report to GitHub Pages
       - name: Deploy Allure Report to GitHub Pages
-        if: always()
+        if: always()  # Ensure this step runs even if tests fail
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
