Updated github actions to run the todomvc app correctly

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -55,8 +55,10 @@ jobs:
       # Step 6: Install npm dependencies, including http-server
       - name: Install npm dependencies
         run: |
+          cd react-todomvc
           npm install
           npm install -g http-server            
+          cd ..
 
       - name: Install Playwright dependencies
         run: npx playwright install-deps
