--- a/.github/workflows/daily-branch-verification.yml
+++ b/.github/workflows/daily-branch-verification.yml
@@ -6,15 +6,40 @@ on:
   workflow_dispatch: # Allows manual triggering of the workflow
 
 jobs:
-  verify-branches:
+  # Get the list of branches dynamically
+  get-branches:
     runs-on: ubuntu-latest
+    outputs:
+      branches: ${{ steps.get-branches.outputs.branches }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Fetch all branches and history
 
-      # Step 2: Set up JDK 17 (adjust if you're using a different version)
+      - name: Get list of branches
+        id: get-branches
+        run: |
+          # List all branches except HEAD and remove origin/ prefix
+          git fetch --all
+          branches=$(git branch -r | grep -v '\->' | grep -v HEAD | grep 'origin/sample-code' | sed 's/origin\///')
+          echo "branches=$branches" >> $GITHUB_ENV
+          echo "::set-output name=branches::$(echo $branches | tr '\n' ',')"
+
+  # Run Maven verify on each branch in parallel
+  verify-branches:
+    needs: get-branches
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        branch: ${{ fromJson(needs.get-branches.outputs.branches) }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.branch }}
+          fetch-depth: 0 # Fetch the branch
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -26,7 +51,6 @@ jobs:
         with:
           node-version: '20'
 
-      # Step 3: Install Maven 3.9.9
       - name: Setup Maven Action
         uses: s4u/setup-maven-action@v1.7.0
         with:
@@ -38,30 +62,13 @@ jobs:
       - name: Install Playwright dependencies
         run: npx playwright install-deps
 
-      - name: Get list of branches
-        id: get-branches
+      - name: Run Maven Verify
         run: |
-          # List all branches except the HEAD and remove origin/ prefix
-          git fetch --all
-          git branch -r | grep -v '\->' | grep -v HEAD | grep 'origin/sample-code' | sed 's/origin\///' > branches.txt
-
-      - name: Show all branches to verify
-        run: cat branches.txt
-
-      - name: Run Maven Verify on Each Branch
-        run: |
-          while read branch; do
-            echo "Processing branch: $branch"
-          
-            # Checkout the branch
-            git checkout $branch
-          
-            # Run Maven verify
-            mvn clean verify
-          
-            if [ $? -ne 0 ]; then
-              echo "Maven verify failed on branch: $branch"
-            else
-              echo "Maven verify succeeded on branch: $branch"
-            fi
-          done < branches.txt
+          echo "Processing branch: ${{ matrix.branch }}"
+          git checkout ${{ matrix.branch }}
+          mvn clean verify
+          if [ $? -ne 0 ]; then
+            echo "Maven verify failed on branch: ${{ matrix.branch }}"
+          else
+            echo "Maven verify succeeded on branch: ${{ matrix.branch }}"
+          fi
