--- a/.github/workflows/daily-branch-verification.yml
+++ b/.github/workflows/daily-branch-verification.yml
@@ -23,8 +23,8 @@ jobs:
           # List all branches except HEAD and remove origin/ prefix
           git fetch --all
           branches=$(git branch -r | grep -v '\->' | grep -v HEAD | grep 'origin/sample-code' | sed 's/origin\///')
-          echo "branches=$branches" >> $GITHUB_ENV
-          echo "::set-output name=branches::$(echo $branches | tr '\n' ',')"
+          formatted_branches=$(echo $branches | tr '\n' ',' | sed 's/,$//')
+          echo "formatted_branches=$formatted_branches" >> $GITHUB_ENV
 
   # Run Maven verify on each branch in parallel
   verify-branches:
@@ -38,34 +38,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
-          fetch-depth: 0 # Fetch the branch
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Setup Maven Action
-        uses: s4u/setup-maven-action@v1.7.0
-        with:
-          checkout-fetch-depth: 0
-          java-version: 17
-          java-distribution: temurin
-          maven-version: 3.9.9
-
-      - name: Install Playwright dependencies
-        run: npx playwright install-deps
+          fetch-depth: 0
 
       - name: Run Maven Verify
         run: |
           echo "Processing branch: ${{ matrix.branch }}"
-          git checkout ${{ matrix.branch }}
           mvn clean verify
           if [ $? -ne 0 ]; then
             echo "Maven verify failed on branch: ${{ matrix.branch }}"
