--- a/.github/workflows/daily-branch-verification.yml
+++ b/.github/workflows/daily-branch-verification.yml
@@ -23,8 +23,10 @@ jobs:
           # List all branches except HEAD and remove origin/ prefix
           git fetch --all
           branches=$(git branch -r | grep -v '\->' | grep -v HEAD | grep 'origin/sample-code' | sed 's/origin\///')
-          formatted_branches=$(echo $branches | tr '\n' ',' | sed 's/,$//')
-          echo "formatted_branches=$formatted_branches" >> $GITHUB_ENV
+          formatted_branches=$(echo $branches | jq -R -s -c 'split("\n") | map(select(. != ""))')
+          echo "branches=$formatted_branches" >> $GITHUB_ENV
+          echo "::set-output name=branches::$formatted_branches"
+          echo "Branches: ${{ needs.get-branches.outputs.branches }}"
 
   # Run Maven verify on each branch in parallel
   verify-branches:
@@ -39,6 +41,12 @@ jobs:
         with:
           ref: ${{ matrix.branch }}
           fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
       - name: Run Maven Verify
         run: |
